--- a/index.html
+++ b/index.html
@@ -1,10 +1,16 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
-    <title>Using Git</title>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <link rel="stylesheet" href="styles.css" />
+    <title>JS App</title>
   </head>
   <body>
-    <h1>Using Git</h1>
-    <p>Creating my first versioned file</p>
+    <div id="root"></div>
+    <script src="script.js"></script>
   </body>
 </html>
